2005-06-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam.cc (before_line_breaking): remove warning about less
	than 2 visible stems. We still get a warning when there is only
	one stem..

2005-06-01  Werner Lemberg  <wl@gnu.org>

	* buildscripts/substitute-encoding.py: Handle PFAemmentaler-xx.pfa
	correctly.

2005-06-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (generate_avoid_offsets): new
	function. Generate avoid offsets once per slur.

	* lily/slur.cc (add_extra_encompass): add dependency to
	extra-encompass object. This fixes bugs/c-phrasing-slur.ly

	* lily/stencil.cc (is_empty): check dim_ field for is_empty()
	too. Fixes inf error with added bass notes.

	* scripts/lilypond-book.py (do_options): --psfonts doesn't take
	argument anymore.

	* make/ly-vars.make (DVIPS_FLAGS): use .psfonts as extension.

	* input/tutorial/lbook-latex-test.tex: add line length test.

	* scripts/lilypond-book.py (set_default_options): new
	function. Call this before dissecting snippets, so linewidth
	settings reach the snippets.

2005-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm (PLATFORM, slashify): Remove double slashes.

2005-06-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/mutopia/R.Schumann/romanze-op28-2.ly (leftb): bugfix.

2005-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: More autopackage friendliness.

2005-05-31  Graham Percival  <gperlist@shaw.ca>

	* Documentation/index.html.in: remove link to LSR.

	* Documentation/user/global.itely: remove duplicate
	"dedication" \header{} section.

2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.5.27.

	* lily/lily-parser-scheme.cc (LY_DEFINE): unprotect paper
	too. Plugs memory leak.

	* make/lilypond.fedora.spec.in (Group): remove
	lilypond-pdfpc-helper.

	* scripts/GNUmakefile (SEXECUTABLES): remove
	lilypond-pdfpc-helper. Use lilypond-invoke-editor instead.

	* scm/font.scm (make-century-schoolbook-tree): add Mono as